
v1.0.10 --> 1.0.xx :
		- don't use the '$' cookie in the zipscript statusbars (fixed a segfault in
		  in case you do - thanx sked for the report)
		- fixed a bug with chmod_completebar.
		- added option for two sets of generic incomplete indicators.
		- compat-fix in the create_sfv routine - BSD extension was not supported on
		  all distros.
		- fix a bug with sample checks and exemption dirs.
		- default statdefault value changed to something valid. (note: statdefault is index, not name, of section).
		- no longer says N/Ams if you disable ping-check of BNCs.
		- rescan of an mp3 release in a audio_nosort_dir should no longer result in a symlink.
		- IRC groupstats triggers changed for consistency (!gp*), see http://bugs.pzs-ng.com/view.php?id=448 for details.
		- You can now have multiple completebars. In config, separate them by newline.
		- Privchannel invites now work correctly for users with multiple groups.

v1.0.9  --> 1.0.10 : (r2339)
		- psxc-imdb v2.8.
		- added option combine_path to allow clients that does not cwd into reldir.
		- fixed a bug with userstats over 2TB.
		- added support for (xvid) yv12 codec.
		- fixed a bug where .message showed full path to releasedir in stats.
		- fixed a bug in the subdir detection routine.
		- never search for sfv in a sample dir.
		- made sitewho and showlog compile in native 64bit.
		- added option to list compiled config in zipscript-c.

v1.0.8  --> 1.0.9  : (r2291)
		- fixed a bug in showlog.
		- fixed a bug with no-nfo symlinks being created if if nfo existed.
		- added Pee's AutoOp.tcl plugin (untested).
		- added option video_types in zsconfig.h - list of video types.
		- added support for sample_script.
		- new var in zsconfig.h - sample_list - list of sample dirs.
		- added support for special announce on sample upload.
		- some new avinfo settings added.
		- New vars in dzsbot.vars: %video_width %video_height %video_fps %video_aspect